working on discover vc

--- a/KismetApp/Storyboards/Base.lproj/Main.storyboard
+++ b/KismetApp/Storyboards/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="n6d-Cc-WcV">
             <objects>
-                <viewController id="l2I-22-i3k" customClass="LoginViewController" customModule="KismetApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="l2I-22-i3k" customClass="LoginViewController" customModule="KismetApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zeY-bC-7SG" customClass="LoginView" customModule="KismetApp" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
