--- a/KismetApp/Storyboards/KismetTab.storyboard
+++ b/KismetApp/Storyboards/KismetTab.storyboard
@@ -268,6 +268,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MSx-F8-fzc">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                                     <state key="normal" title="sign out"/>
+                                                    <connections>
+                                                        <action selector="signOutButonPressed:" destination="CD7-rQ-Itf" eventType="touchUpInside" id="dS2-EP-sW7"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -387,13 +390,13 @@
         <!--Setup Profile View Controller-->
         <scene sceneID="yeB-9E-ndP">
             <objects>
-                <viewController id="27E-Pi-dwc" customClass="SetupProfileViewController" customModule="KismetApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SetupProfileViewController" id="27E-Pi-dwc" customClass="SetupProfileViewController" customModule="KismetApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yyJ-Sk-yx8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCG-jd-SV7">
-                                <rect key="frame" x="16" y="79" width="343" height="466"/>
+                                <rect key="frame" x="16" y="123" width="343" height="422"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2i-9W-QXh">
                                         <rect key="frame" x="19" y="286" width="45" height="21"/>
@@ -440,13 +443,30 @@
                                             <constraint firstAttribute="height" constant="150" id="djO-OY-ZVm"/>
                                         </constraints>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pKB-tb-jXu">
+                                        <rect key="frame" x="67" y="204" width="54" height="30"/>
+                                        <state key="normal" title="Camera"/>
+                                        <connections>
+                                            <action selector="cameraPressed:" destination="27E-Pi-dwc" eventType="touchUpInside" id="q9Q-OQ-kwk"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C1O-Tf-Pa8">
+                                        <rect key="frame" x="218" y="204" width="92" height="30"/>
+                                        <state key="normal" title="Photo Library"/>
+                                        <connections>
+                                            <action selector="photoLibraryPressed:" destination="27E-Pi-dwc" eventType="touchUpInside" id="R4i-ZO-JK7"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="bq5-me-B5q" firstAttribute="top" secondItem="d2i-9W-QXh" secondAttribute="bottom" constant="31" id="0f9-BR-mOI"/>
+                                    <constraint firstItem="ueP-lZ-CtP" firstAttribute="top" secondItem="C1O-Tf-Pa8" secondAttribute="bottom" constant="43" id="1TR-g0-Dyg"/>
                                     <constraint firstItem="d2i-9W-QXh" firstAttribute="leading" secondItem="Mt4-BW-9kH" secondAttribute="leading" constant="4" id="2dy-og-6NY"/>
+                                    <constraint firstItem="pKB-tb-jXu" firstAttribute="leading" secondItem="BCG-jd-SV7" secondAttribute="leading" constant="67" id="3fj-6F-aYw"/>
                                     <constraint firstItem="dQO-Pq-xSB" firstAttribute="top" secondItem="XeR-Oy-1og" secondAttribute="bottom" constant="22" id="GpO-gl-78L"/>
                                     <constraint firstItem="ueP-lZ-CtP" firstAttribute="leading" secondItem="XeR-Oy-1og" secondAttribute="leading" id="HWg-ws-DbS"/>
+                                    <constraint firstItem="pKB-tb-jXu" firstAttribute="baseline" secondItem="C1O-Tf-Pa8" secondAttribute="baseline" id="HhH-hX-2KK"/>
                                     <constraint firstItem="bq5-me-B5q" firstAttribute="leading" secondItem="d2i-9W-QXh" secondAttribute="leading" id="K4f-Tg-Q3a"/>
                                     <constraint firstItem="Mt4-BW-9kH" firstAttribute="top" secondItem="BCG-jd-SV7" secondAttribute="top" constant="8" id="KXU-Sd-iJh"/>
                                     <constraint firstAttribute="trailing" secondItem="Mt4-BW-9kH" secondAttribute="trailing" constant="15" id="Kcb-Ud-5l0"/>
@@ -456,15 +476,16 @@
                                     <constraint firstItem="XeR-Oy-1og" firstAttribute="trailing" secondItem="dQO-Pq-xSB" secondAttribute="trailing" id="afh-JR-FkD"/>
                                     <constraint firstItem="ueP-lZ-CtP" firstAttribute="bottom" secondItem="d2i-9W-QXh" secondAttribute="bottom" id="csl-gF-zph"/>
                                     <constraint firstItem="Mt4-BW-9kH" firstAttribute="leading" secondItem="BCG-jd-SV7" secondAttribute="leading" constant="15" id="gGa-rA-3eV"/>
+                                    <constraint firstItem="C1O-Tf-Pa8" firstAttribute="leading" secondItem="pKB-tb-jXu" secondAttribute="trailing" constant="97" id="hs2-c9-esF"/>
                                     <constraint firstAttribute="trailing" secondItem="ueP-lZ-CtP" secondAttribute="trailing" constant="45" id="p0F-Yb-y8V"/>
                                     <constraint firstItem="XeR-Oy-1og" firstAttribute="leading" secondItem="dQO-Pq-xSB" secondAttribute="leading" id="szU-sV-91g"/>
                                     <constraint firstItem="KLz-Tl-zcr" firstAttribute="bottom" secondItem="dQO-Pq-xSB" secondAttribute="bottom" id="uIo-GE-Xlb"/>
                                     <constraint firstItem="bq5-me-B5q" firstAttribute="top" secondItem="XeR-Oy-1og" secondAttribute="top" id="yyd-o1-ObV"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOj-3d-REd">
-                                <rect key="frame" x="157" y="564" width="60" height="30"/>
-                                <state key="normal" title="Im done!"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOj-3d-REd">
+                                <rect key="frame" x="157" y="564" width="78" height="30"/>
+                                <state key="normal" title="I'm done!"/>
                                 <connections>
                                     <action selector="enterButtonPressed:" destination="27E-Pi-dwc" eventType="touchUpInside" id="Vud-wF-o66"/>
                                 </connections>
@@ -475,24 +496,45 @@
                             <constraint firstItem="gOj-3d-REd" firstAttribute="leading" secondItem="PNI-iN-u9W" secondAttribute="leading" constant="157" id="SVu-jM-nDf"/>
                             <constraint firstItem="BCG-jd-SV7" firstAttribute="top" secondItem="PNI-iN-u9W" secondAttribute="top" constant="59" id="VYv-kW-LXh"/>
                             <constraint firstItem="BCG-jd-SV7" firstAttribute="leading" secondItem="yyJ-Sk-yx8" secondAttribute="leadingMargin" id="aJN-89-GRQ"/>
-                            <constraint firstItem="gOj-3d-REd" firstAttribute="centerX" secondItem="BCG-jd-SV7" secondAttribute="centerX" id="em3-Qf-zpE"/>
+                            <constraint firstItem="gOj-3d-REd" firstAttribute="centerX" secondItem="BCG-jd-SV7" secondAttribute="centerX" constant="8.5" id="em3-Qf-zpE"/>
                             <constraint firstItem="gOj-3d-REd" firstAttribute="top" secondItem="BCG-jd-SV7" secondAttribute="bottom" constant="19" id="ngB-Xh-KFB"/>
                             <constraint firstItem="BCG-jd-SV7" firstAttribute="trailing" secondItem="yyJ-Sk-yx8" secondAttribute="trailingMargin" id="sub-PQ-mAb"/>
                             <constraint firstItem="PNI-iN-u9W" firstAttribute="bottom" secondItem="BCG-jd-SV7" secondAttribute="bottom" constant="122" id="tHF-Vh-xW5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PNI-iN-u9W"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qvT-TI-urn"/>
                     <connections>
+                        <outlet property="cameraButton" destination="pKB-tb-jXu" id="hLu-DW-zfr"/>
                         <outlet property="enterButton" destination="gOj-3d-REd" id="aYf-jL-niX"/>
                         <outlet property="personAgeTextField" destination="XeR-Oy-1og" id="e7Q-iY-ggG"/>
                         <outlet property="personGenderTextField" destination="dQO-Pq-xSB" id="CuJ-Iy-Img"/>
                         <outlet property="personNameTextField" destination="ueP-lZ-CtP" id="4rz-sG-fCV"/>
+                        <outlet property="photoLibrary" destination="C1O-Tf-Pa8" id="t5G-vB-MjS"/>
                         <outlet property="profileImage" destination="Mt4-BW-9kH" id="E78-cl-Rky"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LBS-YB-fGR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1876" y="1085.3073463268368"/>
+            <point key="canvasLocation" x="3288.8000000000002" y="1085.3073463268368"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9TA-zj-iuU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y5r-rs-Rvn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DKH-Dl-xaW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="27E-Pi-dwc" kind="relationship" relationship="rootViewController" id="VLu-5u-xlR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fiO-hw-d8p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2351" y="1086"/>
         </scene>
     </scenes>
     <resources>
