--- a/KismetApp/Storyboards/KismetTab.storyboard
+++ b/KismetApp/Storyboards/KismetTab.storyboard
@@ -228,7 +228,7 @@
         <!--My Profile-->
         <scene sceneID="UBw-lU-Ayl">
             <objects>
-                <tableViewController id="CD7-rQ-Itf" customClass="ProfileViewController" customModule="KismetApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="ProfileViewController" id="CD7-rQ-Itf" customClass="ProfileViewController" customModule="KismetApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="WAW-rY-evi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -373,7 +373,7 @@
                             <outlet property="delegate" destination="CD7-rQ-Itf" id="y3N-py-PA1"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Profile" id="hQT-5l-ohp"/>
+                    <navigationItem key="navigationItem" title="My Profile" id="vHN-Vq-dZh"/>
                     <connections>
                         <outlet property="age" destination="aFQ-WX-W79" id="EM5-P3-204"/>
                         <outlet property="emailLabel" destination="uhX-ZR-seY" id="oBC-Zd-fti"/>
@@ -396,7 +396,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCG-jd-SV7">
-                                <rect key="frame" x="16" y="123" width="343" height="422"/>
+                                <rect key="frame" x="16" y="79" width="343" height="466"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2i-9W-QXh">
                                         <rect key="frame" x="19" y="286" width="45" height="21"/>
@@ -490,6 +490,13 @@
                                     <action selector="enterButtonPressed:" destination="27E-Pi-dwc" eventType="touchUpInside" id="Vud-wF-o66"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LZP-md-18i">
+                                <rect key="frame" x="0.0" y="35" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Setup Profile" id="Y9m-do-Vce"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -503,7 +510,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PNI-iN-u9W"/>
                     </view>
-                    <navigationItem key="navigationItem" id="qvT-TI-urn"/>
                     <connections>
                         <outlet property="cameraButton" destination="pKB-tb-jXu" id="hLu-DW-zfr"/>
                         <outlet property="enterButton" destination="gOj-3d-REd" id="aYf-jL-niX"/>
@@ -516,25 +522,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LBS-YB-fGR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3288.8000000000002" y="1085.3073463268368"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="9TA-zj-iuU">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y5r-rs-Rvn" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DKH-Dl-xaW">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="27E-Pi-dwc" kind="relationship" relationship="rootViewController" id="VLu-5u-xlR"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fiO-hw-d8p" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2351" y="1086"/>
+            <point key="canvasLocation" x="1996" y="1085"/>
         </scene>
     </scenes>
     <resources>
